tests/parser/should_fail/T25530.hs
{-# LANGUAGE MultilineStrings #-}

foo =
  """
  a\
  b
  """

main = print foo
